apps/redpanda/envs/dev/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redpanda-console-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: nerdd-gateway
      namespace: nginx-gateway
  hostnames:
    - nerdd.univie.ac.at
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /redpanda
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Prefix
                value: /redpanda
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: AuthenticationFilter
            name: redpanda-console-auth
      backendRefs:
        - group: ""
          kind: Service
          name: redpanda-console
          port: 8080
          weight: 1
